java 7 comp and dc servers